--- a/SinavSis/SinavSis/SinavSis.csproj
+++ b/SinavSis/SinavSis/SinavSis.csproj
@@ -86,6 +86,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sinavform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Sinavform.Designer.cs">
+      <DependentUpon>Sinavform.cs</DependentUpon>
+    </Compile>
     <Compile Include="SoruEkle.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -111,6 +117,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Sinavform.resx">
+      <DependentUpon>Sinavform.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SoruEkle.resx">
       <DependentUpon>SoruEkle.cs</DependentUpon>
     </EmbeddedResource>
